# project/routes/gameChange.js
@@ -32,9 +32,12 @@ router.post("/", async (req, res, next) => {
             throw { status: 409, message: "Team Cant play agianst itself." };
 
         const date = req.body.gameDate
+        if (! await games_utils.isStage(req.body.stageName)) {
+            throw { status: 409, message: "The Stage is not in the system" };
+        }
         const games = await DButils.execQuery(
             `SELECT stage,homeTeam,awayTeam FROM dbo.Games 
-      WHERE homeTeam = ${req.body.homeTeam} AND awayTeam=${req.body.awayTeam} AND stage='${req.body.stageID}';`
+      WHERE homeTeam = ${req.body.homeTeam} AND awayTeam=${req.body.awayTeam} AND stage='${req.body.stageName}';`
         );
         if (games.length != 0)
             throw { status: 409, message: "Game already in system" };
@@ -43,15 +46,16 @@ router.post("/", async (req, res, next) => {
         const awayteam = await teams_utils.getTeamDetailsbyID(req.body.awayTeam);
         if (!hometeam || (!awayteam))
             throw { status: 409, message: "One of the ids are not in api" };
+
         if (! await games_utils.isReferee(req.body.referee)){
-            throw { status: 409, message: "The Referee isnt in the system" };
+            throw { status: 409, message: "The Referee is not in the system" };
         }
         if (! await games_utils.isStadium(req.body.stadium)) {
-            throw { status: 409, message: "The Stadium isnt in the system" };
+            throw { status: 409, message: "The Stadium is not in the system" };
         }
         await DButils.execQuery(
             `INSERT INTO dbo.Games (gameDate,homeTeam,awayTeam,stage,stadium,referee) VALUES (
-            '${req.body.gameDate}' , ${req.body.homeTeam}, ${req.body.awayTeam},${req.body.stageID},'${req.body.stadium}','${req.body.referee}')`
+            '${req.body.gameDate}' , ${req.body.homeTeam}, ${req.body.awayTeam},'${req.body.stageName}','${req.body.stadium}','${req.body.referee}')`
         );
         res.status(201).send("Game created");
     } catch (error) {
